src/objects/LeanData__Time_To_Action_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Abort_Reason__c</fullName>
        <label>Abort Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TTA Objects</relationshipLabel>
        <relationshipName>TTA_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>TTA Objects</relationshipLabel>
        <relationshipName>TTA_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>TTA Objects</relationshipLabel>
        <relationshipName>TTA_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Entry_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entry Log</label>
        <referenceTo>LeanData__Log__c</referenceTo>
        <relationshipLabel>TTA Entry Logs</relationshipLabel>
        <relationshipName>TTA_Entry_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Evaluate_While_Working__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evaluate while Owner is working</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Exit_Edge__c</fullName>
        <label>Exit Edge</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Exit_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exit Log</label>
        <referenceTo>LeanData__Log__c</referenceTo>
        <relationshipLabel>TTA Exit Logs</relationshipLabel>
        <relationshipName>TTA_Exit_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Exit_Time__c</fullName>
        <label>Exit Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__LD_Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LD Business Unit</label>
        <referenceTo>LeanData__LD_Business_Unit__c</referenceTo>
        <relationshipLabel>TTA LD Business Units</relationshipLabel>
        <relationshipName>TTA_LD_Business_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>TTA Objects</relationshipLabel>
        <relationshipName>TTA_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Node_Name__c</fullName>
        <label>Node Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>TTA Objects</relationshipLabel>
        <relationshipName>TTA_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Owner_Id__c</fullName>
        <label>Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Primary_Id__c</fullName>
        <label>Primary ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Schedule_At_Entry_Time__c</fullName>
        <label>Owner Schedule at Entry Time</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Start_Time__c</fullName>
        <label>Entry/Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Time_To_Action_Calculated__c</fullName>
        <label>Calculated Time-to-Action (in seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Time_To_Action_Hours__c</fullName>
        <formula>LeanData__Time_To_Action_Calculated__c / 60 /60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Time-to-Action (in hours)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Time_To_Action_Minutes__c</fullName>
        <formula>LeanData__Time_To_Action_Calculated__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Time-to-Action (in minutes)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Time_To_Action_Raw__c</fullName>
        <formula>(LeanData__Exit_Time__c - LeanData__Start_Time__c) * 24 * 60 * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Raw Time-to-Action (in seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Timer__c</fullName>
        <label>Timer (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>TTA User</relationshipLabel>
        <relationshipName>TTA_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Time-to-Action Tracker</label>
    <nameField>
        <label>LeanData Time-to-Action Tracker</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LeanData Time-to-Action Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>